--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,13 +18,13 @@ add_executable(nph-zms zms.cpp)
 add_executable(zmstreamer zmstreamer.cpp)
 add_executable(zmfix zmfix.cpp zm_config.cpp zm_regexp.cpp zm_logger.cpp zm_utils.cpp zm_db.cpp zm.cpp)
 
-target_link_libraries(zmc ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS} zm)
-target_link_libraries(zma ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS} zm)
-target_link_libraries(zmu ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS} zm)
-target_link_libraries(zmf ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS} zm)
-target_link_libraries(zms ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS} zm)
-target_link_libraries(nph-zms ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS} zm)
-target_link_libraries(zmstreamer ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS} zm)
+target_link_libraries(zmc zm ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
+target_link_libraries(zma zm ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
+target_link_libraries(zmu zm ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
+target_link_libraries(zmf zm ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
+target_link_libraries(zms zm ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
+target_link_libraries(nph-zms zm ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
+target_link_libraries(zmstreamer zm ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
 target_link_libraries(zmfix ${ZM_EXTRA_LIBS} ${ZM_BIN_LIBS})
 
 install(TARGETS zmc zma zmu zmf zmstreamer zmfix RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
