--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -24,4 +24,4 @@ configure_file(zmx10.pl.in ${CMAKE_CURRENT_SOURCE_DIR}/output/zmx10.pl @ONLY)
 #configure_file(zmeventdump.in ${CMAKE_CURRENT_SOURCE_DIR}/output/zmeventdump @ONLY)
 
 # Install the perl scripts
-install(DIRECTORY output/ DESTINATION "${CMAKE_INSTALL_BINDIR}" FILE_PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(DIRECTORY output/ DESTINATION "${CMAKE_INSTALL_FULL_BINDIR}" FILE_PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
