--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ check_include_file("linux/videodev.h" HAVE_LINUX_VIDEODEV_H)
 check_include_file("linux/videodev2.h" HAVE_LINUX_VIDEODEV2_H)
 check_include_file("execinfo.h" HAVE_EXECINFO_H)
 check_include_file("sys/sendfile.h" HAVE_SYS_SENDFILE_H)
+check_include_file("sys/syscall.h" HAVE_SYS_SYSCALL_H)
 check_function_exists("sendfile" HAVE_SENDFILE)
 check_function_exists("backtrace" HAVE_DECL_BACKTRACE)
 check_function_exists("posix_memalign" HAVE_POSIX_MEMALIGN)
